# MagicSquare

./: .coverage  .gitignore  README.md  pyproject.toml  이소림_KPT.txt.txt
docs/: 5.PRD_MagicSquare_4x4_TDD.md  6.TODO_MagicSquare_4x4_Checklist.md  7.Test_Case_Specification_MagicSquare_4x4.md
prompting/: 001_initial_request.md  002_followup_docs_prompting_request.md  003_dual_track_mlops_docs_session.md  004_cumulative_session_chronology.md  README.md
report/: 10.Cumulative_Work_Summary_2026-04-28.md  6.Proposal_Next_Steps.md  7.Current_Status_Report.md  8.Session_Report_Documentation_DualTrack_2026-04-28.md  9.Test_Case_Specification_Report_2026-04-28.md
src/magicsquare/: __init__.py
src/magicsquare.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/magicsquare/boundary/: contracts.py  input_validator.py
src/magicsquare/control/: use_case.py
src/magicsquare/domain/: empty_cell_locator.py  errors.py  magic_square_resolver.py  magic_square_validator.py  missing_numbers_resolver.py
src/magicsquare/entity/: grid.py
src/magicsquare/gui/: __init__.py  tk_app.py
tests/: conftest.py
tests/boundary/: test_input_contracts.py  test_use_case_boundary.py
tests/domain/: test_domain_components.py  test_nosol_preproof.py
tests/e2e/: test_api_e2e.py
